partial/force-app/main/default/objects/Unit__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <label>Style</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Terraced</fullName>
            </value>
            <value>
                <fullName>EndTerrace</fullName>
            </value>
            <value>
                <fullName>Detached</fullName>
            </value>
            <value>
                <fullName>SemiDetached</fullName>
            </value>
            <value>
                <fullName>LinkDetached</fullName>
            </value>
            <value>
                <fullName>Mews</fullName>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>LowerGroundFloor</fullName>
            </value>
            <value>
                <fullName>GroundFloor</fullName>
            </value>
            <value>
                <fullName>FirstFloor</fullName>
            </value>
            <value>
                <fullName>UpperFloor</fullName>
            </value>
            <value>
                <fullName>UpperFloorWithLift</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>