partial/force-app/main/default/objects/Unit__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Bungalow</fullName>
            </value>
            <value>
                <fullName>FlatApartment</fullName>
            </value>
            <value>
                <fullName>Maisonette</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>Farm</fullName>
            </value>
            <value>
                <fullName>Cottage</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>DevelopmentPlot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>