partial/force-app/main/default/objects/Unit__c/fields/Unit_Address__c.field-meta.xml
<CustomField>
    <fullName>Unit_Address__c</fullName>
    <description>Created to capture Unit Address</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>