partial/force-app/main/default/objects/Unit__c/fields/Unit_Availability__c.field-meta.xml
<CustomField>
    <fullName>Unit_Availability__c</fullName>
    <label>Unit Availability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>