partial/force-app/main/default/objects/Unit__c/fields/Unit_DB_Id__c.field-meta.xml
<CustomField>
    <fullName>Unit_DB_Id__c</fullName>
    <externalId>true</externalId>
    <label>Unit DB Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>