partial/force-app/main/default/objects/Unit__c/fields/Unit_Description__c.field-meta.xml
<CustomField>
    <fullName>Unit_Description__c</fullName>
    <label>Unit Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>