partial/force-app/main/default/objects/Unit__c/fields/Unit_Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Unit_Long_Description__c</fullName>
    <label>Unit Long Description</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>