partial/force-app/main/default/objects/Unit__c/fields/Unit_Name_Web__c.field-meta.xml
<CustomField>
    <fullName>Unit_Name_Web__c</fullName>
    <label>Unit Name Web</label>
    <length>100</length>
    <type>Text</type>
</CustomField>