partial/force-app/main/default/objects/Unit__c/fields/Unit_Path__c.field-meta.xml
<CustomField>
    <fullName>Unit_Path__c</fullName>
    <defaultValue>&quot;Interest Captured&quot;</defaultValue>
    <label>Unit Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interest Captured</fullName>
                <color>#FF0000</color>
                <default>true</default>
                <label>Interest Captured</label>
            </value>
            <value>
                <fullName>Basic Details</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Upload Media</fullName>
            </value>
            <value>
                <fullName>Valuation</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>