partial/force-app/main/default/objects/Unit__c/fields/Unmapped_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Unmapped_Attributes__c</fullName>
    <label>Unmapped Attributes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>