partial/force-app/main/default/objects/Unit__c/fields/URL_Caption__c.field-meta.xml
<CustomField>
    <fullName>URL_Caption__c</fullName>
    <label>URL Caption</label>
    <length>30</length>
    <type>Text</type>
</CustomField>