partial/force-app/main/default/objects/Unit__c/fields/Valuation__c.field-meta.xml
<CustomField>
    <fullName>Valuation__c</fullName>
    <label>Valuation</label>
    <type>DateTime</type>
</CustomField>