partial/force-app/main/default/objects/Unit__c/fields/VAT_Percent__c.field-meta.xml
<CustomField>
    <fullName>VAT_Percent__c</fullName>
    <label>VAT %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>