partial/force-app/main/default/objects/Unit__c/fields/Video2Caption__c.field-meta.xml
<CustomField>
    <fullName>Video2Caption__c</fullName>
    <label>Video2Caption</label>
    <type>TextArea</type>
</CustomField>