partial/force-app/main/default/objects/Unit__c/fields/Video2Url__c.field-meta.xml
<CustomField>
    <fullName>Video2Url__c</fullName>
    <label>Video2Url</label>
    <type>Url</type>
</CustomField>