partial/force-app/main/default/objects/Unit__c/fields/Video_Caption__c.field-meta.xml
<CustomField>
    <fullName>Video_Caption__c</fullName>
    <label>Video Caption</label>
    <type>TextArea</type>
</CustomField>