partial/force-app/main/default/objects/Unit__c/fields/Video_Url__c.field-meta.xml
<CustomField>
    <fullName>Video_Url__c</fullName>
    <label>Video Url</label>
    <type>Url</type>
</CustomField>