partial/force-app/main/default/objects/Unit__c/fields/Viewing_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Viewing_Arrangements__c</fullName>
    <label>Viewing Arrangements</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>