partial/force-app/main/default/objects/Unit__c/fields/Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Website_URL__c</fullName>
    <label>Website URL</label>
    <type>Url</type>
</CustomField>