partial/force-app/main/default/objects/Unit__c/recordTypes/Primary_UK.recordType-meta.xml
<RecordType>
    <fullName>Primary_UK</fullName>
    <active>true</active>
    <label>Primary UK</label>
</RecordType>