partial/force-app/main/default/objects/Unit__c/recordTypes/Reapit_Data.recordType-meta.xml
<RecordType>
    <fullName>Reapit_Data</fullName>
    <active>false</active>
    <label>Reapit Data</label>
</RecordType>