partial/force-app/main/default/objects/Unit__c/recordTypes/Rental_UK.recordType-meta.xml
<RecordType>
    <fullName>Rental_UK</fullName>
    <active>false</active>
    <label>Rental UK</label>
</RecordType>