partial/force-app/main/default/objects/Unit__c/recordTypes/Secondary_UK.recordType-meta.xml
<RecordType>
    <fullName>Secondary_UK</fullName>
    <active>false</active>
    <label>Secondary UK</label>
</RecordType>