partial/force-app/main/default/objects/Unit__c/recordTypes/SG_Units.recordType-meta.xml
<RecordType>
    <fullName>SG_Units</fullName>
    <active>true</active>
    <label>SG Units</label>
</RecordType>