partial/force-app/main/default/objects/Unit__c/recordTypes/UK_Units.recordType-meta.xml
<RecordType>
    <fullName>UK_Units</fullName>
    <active>true</active>
    <label>UK Units</label>
</RecordType>