partial/force-app/main/default/objects/Unit__c/validationRules/CarpetArea_BuildUpArea_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CarpetArea_BuildUpArea_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR((Carpet_Area_m_square__c  &gt;  Build_Up_Area_m_square__c ),(Carpet_Area_square_ft__c  &gt;  Build_Up_Area_square_ft__c ))</errorConditionFormula>
    <errorMessage>Carpet Area Should not be greater than Build Up Area</errorMessage>
</ValidationRule>