partial/force-app/main/default/objects/Unit__c/validationRules/Required_Address_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Address_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND((text(Unit_Path__c)=&quot;Upload Media&quot;), OR(ISBLANK(  Unit_Address__City__s ),ISBLANK(   Unit_Address__Street__s ),ISBLANK(   Unit_Address__PostalCode__s )), ISBLANK(Reapit_Id__c), Record_Type_Name__c &lt;&gt; &quot;Primary UK&quot; )</errorConditionFormula>
    <errorMessage>Address is required before navigating to Upload Media Stage</errorMessage>
</ValidationRule>