partial/force-app/main/default/objects/Unit__c/validationRules/Valuation_Tax_details.validationRule-meta.xml
<ValidationRule>
    <fullName>Valuation_Tax_details</fullName>
    <active>false</active>
    <errorConditionFormula>AND((text(Unit_Path__c)=&quot;Published&quot;),ISBLANK( Unit_Price__c))</errorConditionFormula>
    <errorMessage>Unit Price should be provided before navigating to Published Stage</errorMessage>
</ValidationRule>