partial/force-app/main/default/objects/Unit__c/listViews/All_Dual_Key_Units.listView-meta.xml
<ListView>
    <fullName>All_Dual_Key_Units</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Project_Unit_Type__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>Block_Name__c</columns>
    <columns>Floor__c</columns>
    <columns>Unit_Number__c</columns>
    <columns>Carpet_Area_m_square__c</columns>
    <columns>Build_Up_Area_m_square__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Unit_Availability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit_Availability__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <filters>
        <field>Unit_Type__c</field>
        <operation>equals</operation>
        <value>DK</value>
    </filters>
    <label>All Dual Key Units</label>
</ListView>