partial/force-app/main/default/objects/Unit__c/listViews/SG_Units.listView-meta.xml
<ListView>
    <fullName>SG_Units</fullName>
    <columns>Reapit_Id__c</columns>
    <columns>NAME</columns>
    <columns>Reapit_Marketing_Mode__c</columns>
    <columns>Unit_Path__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Project_Name__c</columns>
    <columns>Project_Unit_Type__c</columns>
    <columns>Unit_Number__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Unit_Availability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Unit__c.SG_Units</value>
    </filters>
    <label>SG Units</label>
</ListView>