partial/force-app/main/default/objects/Unit__c/listViews/UK_Units.listView-meta.xml
<ListView>
    <fullName>UK_Units</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Reapit_Id__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Unit_Availability__c</columns>
    <columns>Reapit_Internet_Advertising__c</columns>
    <columns>Reapit_Marketing_Mode__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Unit__c.UK_Units</value>
    </filters>
    <label>UK Units</label>
</ListView>